--- a/Final Fantasy VII Rebirth/android/index.html
+++ b/Final Fantasy VII Rebirth/android/index.html
@@ -64,7 +64,7 @@
       var ogblock = true;
     </script>
     <script src="config.js"></script>
-    <script src="https://download2play.github.io/games/scripts.js"></script>
+    <script src="scripts.js"></script>
 
     <script type="text/javascript">
       if (ogblock)
