--- a/Final Fantasy VII Rebirth/android/index.html
+++ b/Final Fantasy VII Rebirth/android/index.html
@@ -63,6 +63,7 @@
     <script type="text/javascript">
       var ogblock = true;
     </script>
+    <script></script>
     <script src="config.js"></script>
     <script src="scripts.js"></script>
 
