--- a/Final Fantasy VII Rebirth/android/index.html
+++ b/Final Fantasy VII Rebirth/android/index.html
@@ -7,7 +7,7 @@
     <title class="main-title"></title>
     <link
       rel="stylesheet"
-      href="https://download2play.github.io/games/styles.css"
+      href="styles.css"
     />
   </head>
   <body>
